# web-backend

./: README.md  pyproject.toml
backend/apps/posts/: models.py  serializers.py  views.py
backend/apps/posts/migrations/: 0001_initial.py  0002_alter_post_body_postimage.py
backend/apps/users/: admin.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/videos/: urls.py  views.py
backend/config/: urls.py
backend/config/settings/: base.py
backend/core/: views.py
