[tool.poetry]
name = "drf-backend"
version = "0.1.0"
description = ""
authors = ["Vladyslav Volchanov <volchanov@pm.me>"]
readme = "README.md"
packages = [{include = "drf_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
django-rest-swagger = "^2.2.0"
django-filter = "^22.1"
markdown = "^3.4.1"
django-cors-headers = "^3.13.0"
django-versatileimagefield = "^2.2"
django-model-utils = "^4.2.0"
djoser = "^2.1.0"
requests = "^2.28.1"
pillow = "^9.2.0"
python-dotenv = "^0.21.0"
drf-writable-nested = "^0.7.0"
django-constance = {extras = ["database"], version = "^2.9.1"}
psycopg2-binary = "^2.9.4"
django-ckeditor = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
